[tool.poetry]
name = "main"
version = "0.1.0"
description = "For streaming audio data into an lsl stream"
authors = ["kimit0310 <iktae.kim@childmind.org>"]
license = "GNU Lesser General Public License v2.1"
readme = "README.md"
packages = [{include = "main", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pyaudio = "^0.2.14"
pylsl = "^1.16.2"
numpy = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.5"
pyinstaller = "^6.11.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.6.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
